--- a/01-azure-pipelines.yml
+++ b/01-azure-pipelines.yml
@@ -9,6 +9,8 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+jobs:
+-job : Job1
 steps:
 - script: echo Hello, world, changed!
   displayName: 'Run a one-line script'
@@ -17,3 +19,8 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+-job : Job2
+steps:
+- script: echo Job2!
+  displayName: 'Run a one-line script'
